[package]
name = "nekoos"
version = "0.1.0"
authors = ["Endcat <admin@endcat.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
# fixed problem: language item required, but not found: `eh_personality`
[dependencies]
riscv = { path = "crate/riscv", features = ["inline-asm"] }
buddy_system_allocator = { path = "crate/buddy_system_allocator"}
buddy-allocator = { path = "crate/buddy-allocator" }
lazy_static = { version = "1.3", features = ["spin_no_std"] }
spin = "0.3"